--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,79 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-3xl md:text-5xl font-bold;
+  }
+  h2 {
+    @apply text-2xl md:text-3xl font-bold;
+  }
+  h3 {
+    @apply text-xl md:text-2xl;
+  }
+  h4 {
+    @apply text-base md:text-lg;
+  }
+
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: gray;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: gray;
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+::selection {
+  background-color: #47a3f3;
+  color: #fefefe;
 }
 
-* {
-  box-sizing: border-box;
+html {
+  min-width: 360px;
+  scroll-behavior: smooth;
+}
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.nav {
+  @apply flex items-center justify-between w-full max-w-3xl p-4 mx-auto my-0 2xl:max-w-5xl;
+}
+
+.sticky_nav {
+  position: sticky;
+  z-index: 10;
+  top: 0;
+  backdrop-filter: saturate(180%) blur(20px);
+  transition: background-color 0.1 ease-in-out;
+}
+
+@supports not (backdrop-filter: none) {
+  .sticky_nav {
+    backdrop-filter: none;
+    @apply bg-opacity-100;
+  }
+}
+
+.layout {
+  @apply flex flex-col justify-center items-start max-w-3xl px-4 py-8 mx-auto 2xl:max-w-5xl;
+}
+
+.sticky_card {
+  position: sticky;
+  z-index: 9;
+  top: 100px;
 }
