--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,3 +98,8 @@ html {
   dominant-baseline: middle;
   text-anchor: middle;
 }
+
+.full_shadow {
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.1),
+    0 0 0 1000px rgba(255, 255, 255, 0.95);
+}
