--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,19 +50,22 @@ html {
 }
 
 .nav {
-  @apply flex items-center justify-between w-full max-w-3xl p-4 mx-auto my-0 2xl:max-w-5xl;
+  @apply flex items-center justify-between w-full max-w-3xl px-4 py-1 mx-auto my-0 2xl:max-w-5xl;
 }
 
 .sticky_nav {
   position: sticky;
   z-index: 10;
   top: 0;
+}
+
+.backdrop {
   backdrop-filter: saturate(180%) blur(20px);
   transition: background-color 0.1 ease-in-out;
 }
 
 @supports not (backdrop-filter: none) {
-  .sticky_nav {
+  .backdrop {
     backdrop-filter: none;
     @apply bg-opacity-100;
   }
@@ -94,12 +97,38 @@ html {
 }
 
 .CircularProgressbar .CircularProgressbar-text {
-  font-size: 20px;
+  font-size: 15px;
   dominant-baseline: middle;
   text-anchor: middle;
 }
 
-.full_shadow {
-  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.1),
-    0 0 0 1000px rgba(255, 255, 255, 0.95);
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  background: #8833ff;
+
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 4px;
+}
+
+/* Fancy blur effect */
+#nprogress .peg {
+  display: block;
+  position: absolute;
+  right: 0px;
+  width: 100px;
+  height: 100%;
+  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
+  opacity: 1;
+
+  -webkit-transform: rotate(3deg) translate(0px, -4px);
+  -ms-transform: rotate(3deg) translate(0px, -4px);
+  transform: rotate(3deg) translate(0px, -4px);
 }
